[project]
name = "vpn-site-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.14.1",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "sqlalchemy>=2.0.51",
    "uvicorn[standart]>=0.50.2",
]
